testdata/config/custom-config.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Configuration
metadata:
  name: custom-config
spec:
  timeout: 45s
  skipDelete: true
  failFast: true
  parallel: 4
  reportFormat: "JSON"
  reportName: "custom-report"
  fullName: true
  skipTestRegex: "skip-*"
