testdata/config/timeout-1m.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Configuration
metadata:
  name: timeout-1m
spec:
  timeout: 1m
